// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StopwatchControls Component > enables Lap button when isRunning is true 1`] = `
<DocumentFragment>
  <nav
    aria-label="Stopwatch controls"
    class="_controls_78cbd2"
  >
    <button
      aria-pressed="false"
      class="_button_78cbd2 _primary_78cbd2"
      type="button"
    >
      Start
    </button>
    <button
      class="_button_78cbd2 _secondary_78cbd2"
      disabled=""
      type="button"
    >
      Lap
    </button>
    <button
      class="_button_78cbd2 _tertiary_78cbd2"
      type="button"
    >
      Reset
    </button>
  </nav>
</DocumentFragment>
`;

exports[`StopwatchControls Component > matches snapshot 1`] = `
<DocumentFragment>
  <nav
    aria-label="Stopwatch controls"
    class="_controls_78cbd2"
  >
    <button
      class="_button_78cbd2 _primary_78cbd2"
      type="button"
    >
      Start
    </button>
    <button
      class="_button_78cbd2 _secondary_78cbd2"
      disabled=""
      type="button"
    >
      Lap
    </button>
    <button
      class="_button_78cbd2 _tertiary_78cbd2"
      type="button"
    >
      Reset
    </button>
  </nav>
</DocumentFragment>
`;
